--- a/index.html
+++ b/index.html
@@ -29,42 +29,42 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-global"></use>
                 </svg>
-                <h4 class="heading-4">World best luxury homes</h4>
+                <h4 class="heading-4 heading-4--dark">World best luxury homes</h4>
                 <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus.</p>
             </div>
             <div class="feature">
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-trophy"></use>
                 </svg>
-                <h4 class="heading-4">Only the best property</h4>
+                <h4 class="heading-4 heading-4--dark">Only the best property</h4>
                 <p class="feature__text">Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus rerum sed a eligendi aut quia.          </p>
             </div>
             <div class="feature">
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-map-pin"></use>
                 </svg>
-                <h4 class="heading-4">All homes in top location</h4>
+                <h4 class="heading-4 heading-4--dark">All homes in top location</h4>
                 <p class="feature__text">Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur harum.</p>
             </div>
             <div class="feature">
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-key"></use>
                 </svg>
-                <h4 class="heading-4">New homes in one week</h4>
+                <h4 class="heading-4 heading-4--dark">New homes in one week</h4>
                 <p class="feature__text">Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="feature">
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-presentation"></use>
                 </svg>
-                <h4 class="heading-4">Top 1% realtors</h4>
+                <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
                 <p class="feature__text">Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio necessitatibus pariatur voluptatibus.</p>
             </div>
             <div class="feature">
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-lock"></use>
                 </svg>
-                <h4 class="heading-4">Secure payment on Nexter</h4>
+                <h4 class="heading-4 heading-4--dark">Secure payment on Nexter</h4>
                 <p class="feature__text">Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.</p>
             </div>
         </section>
@@ -74,7 +74,12 @@
         </div>
 
         <div class="story__content">
-            Story content
+            <h3 class="heading-3 mb-sm">Happy customer</h3>
+            <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
+            <p class="story__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus. Quidem consequatur harum volupta!
+            </p>
+            <button class="btn">Find your own home</button>
         </div>
 
         <section class="homes">
